<resources>
    <string name="app_name">Sikia AudioBooks</string>
    <string name="app_string">Sikia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone_no">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_skip">Skip</string>
    <string name="prompt_username">Username</string>
    <string name="word_register">Register</string>
    <string name="prompt_conf_password">Confirm Password</string>

    <!--  Language Choices Array  -->
    <string-array name="lang_choices">
        <item>English</item>
        <item>Kiswahili</item>
    </string-array>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_collection">Collection</string>
    <string name="title_player">Player</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_book_by">By </string>
    <string name="text_suggest">Suggested Audiobooks</string>
    <string name="details_title">The Wheels of Time</string>
    <string name="details_author">Author:</string>
    <string name="details_narrator">Narrator:</string>
    <string name="details_buy">Buy</string>
    <string name="details_sample">Preview</string>
    <string name="player_library">Library</string>
    <string name="player_now_playing">Chapter4: Flying Horses</string>
    <string name="player_title">Wheel of Time</string>
    <string name="player_narrator">Narrated by Robert Jordan</string>
    <string name="player_length">Duration: 1 Hour</string>
    <string name="mediaplayer_title_now">Now Playing</string>
    <string name="mediaplayer_now_playing">Chapter 4: Flying Horses</string>
    <string name="mediaplayer_title">Eye of the World</string>
    <string name="mediaplayer_author">By Robertson Jordan</string>
    <string name="time_start_placeholder">23:24</string>
    <string name="time_end_placeholder">47:00</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_or">Or</string>
    <string name="action_sign_up_with_gmail">Signup with GMail</string>
    <string name="say_invalid_pwd">Password should be atleast 8 characters long, contain atleast one number!</string>
    <string name="say_pwd_no_match">Passwords do not match!</string>
    <string name="say_invalid_email">Email syntax is incorrect!</string>
    <string name="say_error_signup">Could not signup!</string>
    <string name="say_success_signup">Signup Successful!</string>
    <string name="say_error_login">"Sign In failed: "</string>
    <string name="say_success_login">Logged in successfully!</string>
    <string name="action_next">Next</string>
    <string name="search_hint">Find AudioBooks</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_phone">Phone No.</string>
    <string name="account_password">Password</string>
    <string name="account_logout">Sign Out</string>
    <string name="account_membership">Membership</string>
    <string name="account_details">Details</string>
    <string name="account_login">Login</string>
    <string name="account_history">Purchase History</string>
    <string name="account_sound_settings">Sound Settings</string>
    <string name="account_about">About Us</string>
    <string name="account_save">Save Changes</string>
    <string name="account_update_success">Details Succesfully Updated</string>
    <string name="account_update_failed">Details Update Failed</string>
    <string name="title_library">Library</string>
    <string name="title_audiobooks">0 AudioBooks</string>
    <string name="title_placeholder">The Da Vinci Code</string>
    <string name="purchase_thanks">Thank you for purchasing</string>
</resources>