<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.PlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_library"
            android:textSize="@dimen/normal_font" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_now_playing"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_title"
                android:textSize="@dimen/normal_font" />

            <TextView
                android:id="@+id/player_narrator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_narrator"
                android:textSize="@dimen/normal_font" />

            <TextView
                android:id="@+id/player_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_length"
                android:textSize="@dimen/normal_font" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="left"
                android:background="@drawable/ic_baseline_skip_previous_24"
                android:backgroundTint="@color/darkerOlive" />

            <Button
                android:id="@+id/player_button_play_pause"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:background="@drawable/ic_baseline_play_arrow_24"
                android:backgroundTint="@color/darkerOlive" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="right"
                android:layout_marginLeft="40dp"
                android:background="@drawable/ic_baseline_skip_next_24"
                android:backgroundTint="@color/darkerOlive" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>