<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookdetails.BookDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/popup_close"
                android:layout_width="43dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.956"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase_thanks"
                android:textAlignment="center"
                android:textSize="@dimen/large_font"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/details_book_cover"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.421"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/details_book_cover"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_book_title"
                android:text="@string/details_title"
                android:textSize="@dimen/normal_font" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_book_author"
                android:text="@string/details_author"
                android:textSize="@dimen/normal_font" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_book_narrator"
                android:text="@string/details_narrator"
                android:textSize="@dimen/normal_font" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>